# ganglia-mod_ibmrperf

./: README.md  configure.ac
gmond/: Makefile.am
gmond/modules/: Makefile.am
gmond/modules/conf.d/: ibmrperf.conf
gmond/modules/ibmrperf/: Makefile.am  mod_ibmrperf-aix.c  mod_ibmrperf-linux.c
